--- a/slai.html
+++ b/slai.html
@@ -1005,7 +1005,7 @@
                     <option value="绘图">绘图1</option>
                     <option value="flux">绘图2</option>
                     <option value="url-analysis">链接内容分析</option>
-                    <option value="veo3-fast">veo3-fast</option>
+                    <option value="veo3-fast-frames">veo3</option>
                 </select>
                 <label for="tempSlider">温度:</label>
                 <input type="range" id="tempSlider" min="0" max="2" step="0.1" value="0.7">
