--- a/slai.html
+++ b/slai.html
@@ -1006,6 +1006,7 @@
                     <option value="flux">绘图2</option>
                     <option value="url-analysis">链接内容分析</option>
                     <option value="veo3-fast">veo3</option>
+                    <option value="新闻稿">新闻稿撰写</option>
                 </select>
                 <label for="tempSlider">温度:</label>
                 <input type="range" id="tempSlider" min="0" max="2" step="0.1" value="0.7">
