--- a/slai.html
+++ b/slai.html
@@ -1005,7 +1005,7 @@
                     <option value="绘图">绘图1</option>
                     <option value="flux">绘图2</option>
                     <option value="url-analysis">链接内容分析</option>
-                    <option value="veo3-fast">veo3</option>
+                    <option value="veo3-fast-frames">veo3</option>
                     <option value="新闻稿">新闻稿撰写</option>
                 </select>
                 <label for="tempSlider">温度:</label>
