--- a/slai.html
+++ b/slai.html
@@ -1096,7 +1096,7 @@
     </div>
 
     <!-- 添加Markdown解析库 -->
-    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+    <script src="./marked.min.js"></script>
 
     <script>
         // 全局变量
